// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Weapon utils calculateDamage Great Sword 1`] = `
[
  {
    "elementalDamage": 0.675,
    "koDamage": undefined,
    "rawDamage": 144.78750000000002,
    "totalDamage": 145,
  },
]
`;

exports[`Weapon utils calculateDamage Hammer 1`] = `
[
  {
    "elementalDamage": 0.675,
    "koDamage": 0,
    "rawDamage": 22.5,
    "totalDamage": 23,
  },
  {
    "elementalDamage": 0.675,
    "koDamage": 72,
    "rawDamage": 85.49999999999999,
    "totalDamage": 86,
  },
]
`;

exports[`Weapon utils calculateDamage Lance Cut hitzone 1`] = `
[
  {
    "elementalDamage": 2.025,
    "koDamage": undefined,
    "rawDamage": 25.515000000000004,
    "totalDamage": 27,
  },
  {
    "elementalDamage": 2.025,
    "koDamage": undefined,
    "rawDamage": 25.515000000000004,
    "totalDamage": 27,
  },
  {
    "elementalDamage": 2.025,
    "koDamage": undefined,
    "rawDamage": 27.337500000000002,
    "totalDamage": 29,
  },
]
`;

exports[`Weapon utils calculateDamage Lance Modified impact hitzone 1`] = `
[
  {
    "elementalDamage": 2.7,
    "koDamage": undefined,
    "rawDamage": 47.17440000000001,
    "totalDamage": 49,
  },
  {
    "elementalDamage": 2.7,
    "koDamage": undefined,
    "rawDamage": 47.17440000000001,
    "totalDamage": 49,
  },
  {
    "elementalDamage": 2.7,
    "koDamage": undefined,
    "rawDamage": 50.54400000000001,
    "totalDamage": 53,
  },
]
`;

exports[`Weapon utils calculateDamage Longsword Spirit Guage NONE 1`] = `
[
  {
    "elementalDamage": 2.115,
    "koDamage": undefined,
    "rawDamage": 25.485384375000002,
    "totalDamage": 27,
  },
]
`;

exports[`Weapon utils calculateDamage Longsword Spirit Guage RED 1`] = `
[
  {
    "elementalDamage": 2.115,
    "koDamage": undefined,
    "rawDamage": 33.1309996875,
    "totalDamage": 35,
  },
]
`;

exports[`Weapon utils calculateDamage Longsword Spirit Guage WHITE 1`] = `
[
  {
    "elementalDamage": 2.115,
    "koDamage": undefined,
    "rawDamage": 26.759653593750002,
    "totalDamage": 28,
  },
]
`;

exports[`Weapon utils calculateDamage Longsword Spirit Guage YELLOW 1`] = `
[
  {
    "elementalDamage": 2.115,
    "koDamage": undefined,
    "rawDamage": 28.0339228125,
    "totalDamage": 30,
  },
]
`;
